// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EzButton should render primary button with destructive styles 1`] = `
.recipe-0 {
  border: 1px solid;
  border-radius: 4px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.25rem;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  color: #FFFFFF;
  border-color: #db2828;
  border-color: #db2828;
  background-color: #db2828;
}

.recipe-0:hover:enabled {
  border-color: #ba2222;
}

.recipe-0:focus:enabled {
  border-color: #a41e1e;
}

.recipe-0:active:enabled {
  border-color: #a41e1e;
}

.recipe-0:hover:enabled {
  background-color: #ba2222;
}

.recipe-0:active:enabled {
  background-color: #a41e1e;
}

<button
  className="recipe-0 recipe-1"
>
  Click Me
</button>
`;

exports[`EzButton should render secondary button with destructive styles 1`] = `
.recipe-0 {
  border: 1px solid;
  border-radius: 4px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.25rem;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  background-color: white;
  border: solid 1px;
  border-color: #CED4D9;
  color: #db2828;
}

.recipe-0:hover:enabled {
  border-color: #afb4b8;
}

.recipe-0:focus:enabled {
  border-color: #3E90D6;
}

.recipe-0:active:enabled {
  border-color: #9a9fa2;
}

.recipe-0:hover:enabled {
  color: #ba2222;
}

.recipe-0:active:enabled {
  color: #a41e1e;
}

<button
  className="recipe-0 recipe-1"
>
  Click Me
</button>
`;

exports[`EzButton should render with disabled styles 1`] = `
.recipe-0 {
  border: 1px solid;
  border-radius: 4px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.25rem;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  color: #FFFFFF;
  border-color: #2484d7;
  border-color: #2484d7;
  background-color: #2484d7;
  cursor: default;
  opacity: 0.45;
  pointer-events: none;
}

.recipe-0:hover:enabled {
  border-color: #1e70b6;
}

.recipe-0:focus:enabled {
  border-color: #1b63a1;
}

.recipe-0:active:enabled {
  border-color: #1b63a1;
}

.recipe-0:hover:enabled {
  background-color: #1e70b6;
}

.recipe-0:active:enabled {
  background-color: #1b63a1;
}

<button
  className="recipe-0 recipe-1"
  disabled={true}
>
  Click Me
</button>
`;

exports[`EzButton should render with primary styles 1`] = `
.recipe-0 {
  border: 1px solid;
  border-radius: 4px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.25rem;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  color: #FFFFFF;
  border-color: #2484d7;
  border-color: #2484d7;
  background-color: #2484d7;
}

.recipe-0:hover:enabled {
  border-color: #1e70b6;
}

.recipe-0:focus:enabled {
  border-color: #1b63a1;
}

.recipe-0:active:enabled {
  border-color: #1b63a1;
}

.recipe-0:hover:enabled {
  background-color: #1e70b6;
}

.recipe-0:active:enabled {
  background-color: #1b63a1;
}

<button
  className="recipe-0 recipe-1"
>
  Click Me
</button>
`;

exports[`EzButton should render with secondary styles 1`] = `
.recipe-0 {
  border: 1px solid;
  border-radius: 4px;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.12);
  cursor: pointer;
  display: inline-block;
  outline: 0;
  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
  line-height: 1em;
  min-height: 1em;
  margin-right: 0.25rem;
  padding: 0.75rem 1.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: transparent;
  background-color: white;
  border: solid 1px;
  border-color: #CED4D9;
  color: #2484d7;
}

.recipe-0:hover:enabled {
  border-color: #afb4b8;
}

.recipe-0:focus:enabled {
  border-color: #3E90D6;
}

.recipe-0:active:enabled {
  border-color: #9a9fa2;
}

.recipe-0:hover:enabled {
  color: #1e70b6;
}

.recipe-0:active:enabled {
  color: #1b63a1;
}

<button
  className="recipe-0 recipe-1"
>
  Click Me
</button>
`;
